--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,10 @@ version: '1.8.{build}'
 
 configuration: Release
 platform: Any CPU
-image: Visual Studio 2017
+image:
+- Visual Studio 2017
+- Ubuntu
+
 shallow_clone: true
 
 install:
