--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,12 @@ install:
 - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 5
 
 before_build:
+- sh: sudo apt-key adv --no-tty --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+- sh: echo "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+- sh: sudo apt update
+- sh: sudo apt-get install -y mono-devel
+- sh: sudo apt-get install -y qemu-system-x86
+
 - nuget restore -Verbosity quiet Source/Mosa.sln
 
 build:
