--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ version: '1.8.{build}'
 configuration: Release
 platform: Any CPU
 image:
-- Ubuntu
+- Ubuntu1804
 #- Visual Studio 2017
 
 shallow_clone: true
@@ -14,7 +14,6 @@ install:
 
 before_build:
 - sh: sudo apt-key adv --no-tty --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-- sh: sudo apt install apt-transport-https
 - sh: echo "deb https://download.mono-project.com/repo/ubuntu stable-xenial main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
 - sh: sudo apt update
 - sh: sudo apt-get install -y mono-devel
