--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,8 @@ shallow_clone: true
 for:
   -
     matrix:
-      - image: Visual Studio 2017
+      only:
+        - image: Visual Studio 2017
 
 
     install:
@@ -51,7 +52,8 @@ for:
 
   -
     matrix:
-      - image: Ubuntu1804
+      only:
+        - image: Ubuntu1804
 
     install:
     - sh: docker pull seblon/mosa-docker-integration
