--- a/appveyor.yml
+++ b/appveyor.yml
@@ -70,5 +70,5 @@ for:
 #      project: Source/Mosa.sln
 
     build_script:
-    - sh: echo test
+    - sh: echo ${PWD}; ls -l;
     - sh: docker run --name MOSA -v ${PWD}/Ressources/docker-integration/start:/home/mosa/start seblon/mosa-docker-integration /bin/bash -c /home/mosa/start
