--- a/appveyor.yml
+++ b/appveyor.yml
@@ -70,5 +70,6 @@ for:
 #      project: Source/Mosa.sln
 
     build_script:
-    - sh: echo ${PWD}; ls -l; ls -l ${PWD} ; echo blubb; ls -l ${PWD}/Ressources; ls -l ${PWD}/Ressources/docker-integration
+    - sh: echo $APPVEYOR_BUILD_FOLDER; ls -l $APPVEYOR_BUILD_FOLDER; 
+    - sh: echo $PWD; ls -l; ls -l $PWD ; echo blubb; ls -l $PWD/Ressources; ls -l $PWD/Ressources/docker-integration
     - sh: docker run --name MOSA -v ${PWD}/Ressources/docker-integration/start:/home/mosa/start2 seblon/mosa-docker-integration /bin/bash -c /home/mosa/start2
