--- a/appveyor.yml
+++ b/appveyor.yml
@@ -70,6 +70,6 @@ for:
 #      project: Source/Mosa.sln
 
     build_script:
-    - sh: echo $APPVEYOR_BUILD_FOLDER; ls -l $APPVEYOR_BUILD_FOLDER; 
-    - sh: echo $PWD; ls -l; ls -l $PWD ; echo blubb; ls -l $PWD/Ressources; ls -l $PWD/Ressources/docker-integration
-    - sh: docker run --name MOSA -v ${PWD}/Ressources/docker-integration/start:/home/mosa/start2 seblon/mosa-docker-integration /bin/bash -c /home/mosa/start2
+#    - sh: echo $APPVEYOR_BUILD_FOLDER; ls -l $APPVEYOR_BUILD_FOLDER; 
+#    - sh: echo $PWD; ls -l; ls -l $PWD ; echo blubb; ls -l $PWD/Ressources; ls -l $PWD/Ressources/docker-integration
+    - sh: docker run --name MOSA -v $APPVEYOR_BUILD_FOLDER/Ressources/docker-integration/start:/home/mosa/start2 seblon/mosa-docker-integration /bin/bash -c /home/mosa/start2
