--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,13 +31,13 @@ for:
       publish_nuget: true
 
     after_build:
-#    - ps: ./mosactl.ps1 test
+    - ps: ./mosactl.ps1 test
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
 
     build_script:
 
     test_script:
-    - cmd: ./mosactl.ps1 test
+#    - cmd: ./mosactl.ps1 test
 
     after_test:
 
