--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,8 +61,8 @@ for:
       only:
         - image: Ubuntu1804
 
-#    install:
-#    - sh: docker pull seblon/mosa-docker-integration
+    install:
+    - sh: docker pull seblon/mosa-docker-integration || docker pull seblon/mosa-docker-integration # with retry, if failed
 
     before_build:
     - echo test
