--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Tests
 # This workflow is triggered on pushes to the repository.
-on: [push]
-
+on:
+  push:
+    tags-ignore:
+      - v*
+      
 jobs:
   build-unix:
     name: Linux Test
