--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 name: Tests
 # This workflow is triggered on pushes to the repository.
-on:
-  push:
-    tags-ignore:
-      - "**"
+on: [push]
 
 jobs:
   build-unix:
