--- a/Source/Mosa.Korlib/Mosa.Korlib.csproj
+++ b/Source/Mosa.Korlib/Mosa.Korlib.csproj
@@ -104,6 +104,7 @@
     <Compile Include="System.Runtime.InteropServices\FieldOffsetAttribute.cs" />
     <Compile Include="System.Runtime.InteropServices\GuidAttribute.cs" />
     <Compile Include="System.Runtime.InteropServices\LayoutKind.cs" />
+    <Compile Include="System.Runtime.InteropServices\InAttribute.cs" />
     <Compile Include="System.Runtime.InteropServices\PreserveSigAttribute.cs" />
     <Compile Include="System.Runtime.InteropServices\StructLayoutAttribute.cs" />
     <Compile Include="System.Runtime.InteropServices\DllImportAttribute.cs" />
